# Sistema-de-Control-de-Estudiantes

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  actions.py  alembic.ini  data.py  main.py  menu.py  pyproject.toml  railpack.json  railway.toml  render.yaml  requirements.txt
.github/workflows/: tests.yml
docs/: README.md
migrations/: env.py
migrations/versions/: 20260711_01_create_students_and_grades.py
src/student_control_system/: __init__.py  actions.py  api.py  config.py  data.py  database.py  demo_data.py  menu.py  models.py  repository.py  schemas.py  services.py
src/student_control_system/routes/: __init__.py  students.py
src/student_control_system/web/: app.js  index.html  styles.css
tests/: test_actions.py  test_api.py  test_data.py  test_database.py  test_demo_data.py  test_menu.py  test_repository.py
