[project]
name = "student-control-system"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1.0"]

[tool.unittest]
start-directory = "tests"
